force-app/main/default/objects/Lead/fields/HubSpot_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Contact_ID__c</fullName>
    <externalId>true</externalId>
    <label>HubSpot Contact ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>