force-app/main/default/objects/Lead/fields/HubSpot_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Lead_Id__c</fullName>
    <externalId>true</externalId>
    <label>HubSpot Lead Id</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>