force-app/main/default/objects/Lead/fields/HubSpot_Team__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Team__c</fullName>
    <label>HubSpot Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Hire AEs</fullName>
            </value>
            <value>
                <fullName>Treasury Services Exec</fullName>
            </value>
            <value>
                <fullName>Transaction Services AEs</fullName>
            </value>
            <value>
                <fullName>Solution Engineers - Alliances Team</fullName>
            </value>
            <value>
                <fullName>Circle Executive</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Treasury Operations</fullName>
            </value>
            <value>
                <fullName>Deactivated Users - Treasury Services</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Payment Operations</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Yield Relationship Managers</fullName>
            </value>
            <value>
                <fullName>Sales Enablement</fullName>
            </value>
            <value>
                <fullName>Customer Success Exec</fullName>
            </value>
            <value>
                <fullName>Circle Account Approvers</fullName>
            </value>
            <value>
                <fullName>Data Science</fullName>
            </value>
            <value>
                <fullName>Circle Ventures</fullName>
            </value>
            <value>
                <fullName>Customer Care Exec</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Post Sales Solutions Engineers</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Revenue Operations</fullName>
            </value>
            <value>
                <fullName>AML Investigations</fullName>
            </value>
            <value>
                <fullName>Envisionit</fullName>
            </value>
            <value>
                <fullName>Service Accounts</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Transaction Services Exec</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>