force-app/main/default/objects/Lead/fields/Invalid_email_address__c.field-meta.xml
<CustomField>
    <fullName>Invalid_email_address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invalid Email Address</label>
    <type>Checkbox</type>
</CustomField>