force-app/main/default/objects/Lead/fields/Is_this_a_work_email__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_work_email__c</fullName>
    <label>Is This a Work Email?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>