force-app/main/default/objects/Lead/fields/Job_Level_Seniority__c.field-meta.xml
<CustomField>
    <fullName>Job_Level_Seniority__c</fullName>
    <label>Job Level / Seniority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Other or Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>