force-app/main/default/objects/Lead/fields/Last_Completed_Step__c.field-meta.xml
<CustomField>
    <fullName>Last_Completed_Step__c</fullName>
    <label>Last Completed Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>