force-app/main/default/objects/Lead/fields/Last_Contacted_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Contacted_By__c</fullName>
    <label>Last Contacted By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>