force-app/main/default/objects/Lead/fields/Last_Replied_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Replied_At__c</fullName>
    <label>Last Replied At</label>
    <type>Date</type>
</CustomField>