force-app/main/default/objects/Lead/fields/Last_Salesforce_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Last_Salesforce_Campaign__c</fullName>
    <description>Read only field that is used in a flow</description>
    <label>Last Salesforce Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>