force-app/main/default/objects/Lead/fields/Last_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Last_Transaction__c</fullName>
    <label>Last Transaction</label>
    <type>Date</type>
</CustomField>