force-app/main/default/objects/Lead/fields/Lead_Currency__c.field-meta.xml
<CustomField>
    <fullName>Lead_Currency__c</fullName>
    <label>Lead Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD - U.S. Dollar</fullName>
            </value>
            <value>
                <fullName>EUR - Euro</fullName>
            </value>
            <value>
                <fullName>TWD - Taiwan Dollar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>