force-app/main/default/objects/Lead/fields/Lead_Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Referral_Source__c</fullName>
    <label>Lead Referral Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>