force-app/main/default/objects/Lead/fields/Lead_source_details__c.field-meta.xml
<CustomField>
    <fullName>Lead_source_details__c</fullName>
    <label>Lead Source Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>