force-app/main/default/objects/Lead/fields/Lead_Source_v1__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_v1__c</fullName>
    <label>Lead Source v1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>