force-app/main/default/objects/Lead/fields/Legal_basis_for_processing_contact_s_dat__c.field-meta.xml
<CustomField>
    <fullName>Legal_basis_for_processing_contact_s_dat__c</fullName>
    <label>Legal Basis for Processing Contact Data</label>
    <type>TextArea</type>
</CustomField>