force-app/main/default/objects/Lead/fields/Likelihood_to_close__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_to_close__c</fullName>
    <label>Likelihood to close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>