force-app/main/default/objects/Lead/fields/Loan_Duration__c.field-meta.xml
<CustomField>
    <fullName>Loan_Duration__c</fullName>
    <label>Loan Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>