force-app/main/default/objects/Lead/fields/Marketing_emails_bounced__c.field-meta.xml
<CustomField>
    <fullName>Marketing_emails_bounced__c</fullName>
    <label>Marketing Emails Bounced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>