force-app/main/default/objects/Lead/fields/Marketing_emails_replied__c.field-meta.xml
<CustomField>
    <fullName>Marketing_emails_replied__c</fullName>
    <label>Marketing Emails Replied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>