force-app/main/default/objects/Lead/fields/MarOps_Sync_to_Salesloft__c.field-meta.xml
<CustomField>
    <fullName>MarOps_Sync_to_Salesloft__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MarOps Sync to Salesloft</label>
    <type>Checkbox</type>
</CustomField>