force-app/main/default/objects/Lead/fields/Meeting_Type_CP__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type_CP__c</fullName>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default Meeting Type</fullName>
            </value>
            <value>
                <fullName>SDR Sourced</fullName>
            </value>
            <value>
                <fullName>My meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>