force-app/main/default/objects/Lead/fields/Monthly_trading_volume__c.field-meta.xml
<CustomField>
    <fullName>Monthly_trading_volume__c</fullName>
    <label>Monthly Trading Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>