force-app/main/default/objects/Lead/fields/Non_Reg_Business_Path_Clicked__c.field-meta.xml
<CustomField>
    <fullName>Non_Reg_Business_Path_Clicked__c</fullName>
    <label>Non Reg Business Path Clicked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sandbox</fullName>
            </value>
            <value>
                <fullName>USDC Ecosystem</fullName>
            </value>
            <value>
                <fullName>Contact Us</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>