force-app/main/default/objects/Lead/fields/Non_Reg_Business_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Non_Reg_Business_Use_Case__c</fullName>
    <label>Non Reg Business Use Case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>