force-app/main/default/objects/Lead/fields/NonAuthorizedEmail__c.field-meta.xml
<CustomField>
    <fullName>NonAuthorizedEmail__c</fullName>
    <label>NonAuthorizedEmail</label>
    <type>TextArea</type>
</CustomField>