force-app/main/default/objects/Lead/fields/Number_of_Associated_Deals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Associated_Deals__c</fullName>
    <label>Number of Associated Deals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>