force-app/main/default/objects/Lead/fields/Number_of_Circle_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Circle_Accounts__c</fullName>
    <label>Number of Circle Accounts</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>