force-app/main/default/objects/Lead/fields/Number_of_Sales_Activities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sales_Activities__c</fullName>
    <label>Number of Sales Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>