force-app/main/default/objects/Lead/fields/Opted_out_of_email_Circle_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Opted_out_of_email_Circle_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opted Out of Email: Circle Newsletter</label>
    <type>Checkbox</type>
</CustomField>