force-app/main/default/objects/Lead/fields/Opted_out_of_email_One_to_One__c.field-meta.xml
<CustomField>
    <fullName>Opted_out_of_email_One_to_One__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opted Out of Email: One to One</label>
    <type>Checkbox</type>
</CustomField>