force-app/main/default/objects/Lead/fields/Opted_out_of_email_Pressroom_Subscripti__c.field-meta.xml
<CustomField>
    <fullName>Opted_out_of_email_Pressroom_Subscripti__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opted Out of Email: Pressroom Subscript.</label>
    <type>Checkbox</type>
</CustomField>