force-app/main/default/objects/Lead/fields/Opted_out_of_email_Product_Information__c.field-meta.xml
<CustomField>
    <fullName>Opted_out_of_email_Product_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opted Out of Email: Product Info/Updates</label>
    <type>Checkbox</type>
</CustomField>