force-app/main/default/objects/Lead/fields/Opted_out_of_email_Support_Sales_and_A__c.field-meta.xml
<CustomField>
    <fullName>Opted_out_of_email_Support_Sales_and_A__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opted Out of Email: Support/Sales/Acct</label>
    <type>Checkbox</type>
</CustomField>