force-app/main/default/objects/Lead/fields/Opted_out_of_email_The_Money_Movement__c.field-meta.xml
<CustomField>
    <fullName>Opted_out_of_email_The_Money_Movement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opted Out of Email: The Money Movement</label>
    <type>Checkbox</type>
</CustomField>