force-app/main/default/objects/Lead/fields/Opted_out_of_email_Transactional__c.field-meta.xml
<CustomField>
    <fullName>Opted_out_of_email_Transactional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opted Out of Email: Transactional</label>
    <type>Checkbox</type>
</CustomField>