force-app/main/default/objects/Lead/fields/Opted_out_of_email_Webinars_Events__c.field-meta.xml
<CustomField>
    <fullName>Opted_out_of_email_Webinars_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opted Out of Email: Webinars &amp; Events</label>
    <type>Checkbox</type>
</CustomField>