force-app/main/default/objects/Lead/fields/Original_GCLID__c.field-meta.xml
<CustomField>
    <fullName>Original_GCLID__c</fullName>
    <description>Original Google Ad click ID</description>
    <label>Original GCLID</label>
    <type>TextArea</type>
</CustomField>