force-app/main/default/objects/Lead/fields/Outbound_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Meeting__c</fullName>
    <label>Outbound Meeting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>