force-app/main/default/objects/Lead/fields/PDR_Owner__c.field-meta.xml
<CustomField>
    <fullName>PDR_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PDR Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>