force-app/main/default/objects/Lead/fields/PDR_Owner_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>PDR_Owner_Is_Active__c</fullName>
    <formula>PDR_Owner__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDR Owner Is Active?</label>
    <type>Checkbox</type>
</CustomField>