force-app/main/default/objects/Lead/fields/PDR_Owner_Text__c.field-meta.xml
<CustomField>
    <fullName>PDR_Owner_Text__c</fullName>
    <formula>PDR_Owner__r.FirstName +&quot; &quot;+ PDR_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDR Owner (Text)</label>
    <type>Text</type>
</CustomField>