force-app/main/default/objects/Lead/fields/Person_Stage__c.field-meta.xml
<CustomField>
    <fullName>Person_Stage__c</fullName>
    <label>Person Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Closed - Converted</fullName>
            </value>
            <value>
                <fullName>Closed - Not Converted</fullName>
            </value>
            <value>
                <fullName>Bounced</fullName>
            </value>
            <value>
                <fullName>Do Not Contact</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Replied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>